creusot/tests/should_fail/bug/subregion.mlcfg

module Subregion_ListReversalH
  use prelude.UIntSize
  use prelude.Int
  let rec cfg list_reversal_h [#"../subregion.rs" 3 0 3 37] [@cfg:stackify] [@cfg:subregion_analysis] (l : usize) : usize
    
   = [@vc:do_not_keep_trace] [@vc:sp]
  var _0 : usize;
  var l : usize = l;
  var r : usize;
  var _7 : bool;
  var x : usize;
  var tmp : usize;
  {
    goto BB0
  }
  BB0 {
    [#"../subregion.rs" 4 16 4 17] r <- ([#"../subregion.rs" 4 16 4 17] [#"../subregion.rs" 4 16 4 17] (0 : usize));
    goto BB1
  }
  BB1 {
    invariant { [#"../subregion.rs" 5 16 5 20] true };
    goto BB2
  }
  BB2 {
    [#"../subregion.rs" 6 10 6 16] _7 <- ([#"../subregion.rs" 6 10 6 16] l <> ([#"../subregion.rs" 6 15 6 16] (0 : usize)));
    switch (_7)
      | False -> goto BB4
      | True -> goto BB3
      end
  }
  BB3 {
    assert { [@expl:assertion] [#"../subregion.rs" 7 22 7 27] false };
    [#"../subregion.rs" 8 16 8 17] x <- ([#"../subregion.rs" 8 16 8 17] r);
    [#"../subregion.rs" 9 18 9 19] tmp <- ([#"../subregion.rs" 9 18 9 19] l);
    [#"../subregion.rs" 10 8 10 15] r <- ([#"../subregion.rs" 10 8 10 15] tmp);
    goto BB1
  }
  BB4 {
    [#"../subregion.rs" 13 11 13 12] _0 <- ([#"../subregion.rs" 13 11 13 12] r);
    return _0
  }
  
end
